--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: BlankPlugin
-main: dev.bitsnthings.mc.blank.BlankPlugin
+name: noPerms
+main: dev.bitsnthings.mc.noperms.NoPerms
 version: 1.0
 api-version: 1.13
 commands:
