--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,18 @@
                    https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin
                -->
                 <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <finalName>${project.name}-${project.version}-shaded</finalName>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
         <resources>
